--- a/inertialbox/load-balancer-one/nginx-balancer.conf
+++ b/inertialbox/load-balancer-one/nginx-balancer.conf
@@ -4,6 +4,14 @@ upstream backend {
 }
 
 server {
+  gzip on;
+  gzip_http_version 1.0;
+  gzip_min_length 100;
+  gzip_types text/plain text/css image/x-icon image/png image/jpg image/jpeg text/js text/php application/javascript application/x-javascript;
+  gzip_vary on;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_disable     "MSIE [1-6]\.";
+
   listen 80;
   #server_name  www.example.com;
 
