Clean up base image for load-balancer

--- a/nginx-load-balancer/Dockerfile
+++ b/nginx-load-balancer/Dockerfile
@@ -1,16 +1,31 @@
-FROM inertialbox/trusty-base
+FROM ubuntu:trusty
 MAINTAINER Michael de Silva <michael@inertialbox.com>
 
-# Install nodejs
-RUN apt-get update
-RUN apt-get install -qq -y nodejs # JS runtime
-RUN apt-get install -y libmysqlclient-dev # for mysql2 gem
+RUN apt-get update && \
+  DEBIAN_FRONTEND=noninteractive apt-get upgrade -y && \
+  DEBIAN_FRONTEND=noninteractive apt-get -y install \
+    wget \
+    build-essential \
+    curl \
+    git-core \
+    python-dev \
+    python-setuptools \
+    python-software-properties \
+    software-properties-common 
 
-# Intall software-properties-common for add-apt-repository
-RUN apt-get install -qq -y software-properties-common
+# install essentials
+RUN DEBIAN_FRONTEND=noninteractive apt-get -y install \
+    git \
+    vim \
+    atop \
+    htop \
+    silversearcher-ag
+
+# Add official git and nginx APT repositories
+RUN apt-add-repository ppa:git-core/ppa
+RUN add-apt-repository -y ppa:nginx/stable
 
 # Install Nginx.
-RUN add-apt-repository -y ppa:nginx/stable
 RUN apt-get install -qq -y nginx
 RUN echo "\ndaemon off;" >> /etc/nginx/nginx.conf
 RUN chown -R www-data:www-data /var/lib/nginx
