--- a/rails-nginx-unicorn/nginx-sites.conf
+++ b/rails-nginx-unicorn/nginx-sites.conf
@@ -8,6 +8,14 @@ server {
   root /home/app/public;
   try_files $uri @unicorn_server;
 
+  gzip on;
+  gzip_http_version 1.0;
+  gzip_min_length 100;
+  gzip_types text/plain text/css image/x-icon image/png image/jpg image/jpeg text/js text/php application/javascript application/x-javascript;
+  gzip_vary on;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_disable     "MSIE [1-6]\.";
+
   location @unicorn_server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
